[project]
name = "fastapi-project"
version = "0.0.1"
description = ""
authors = [{ name = "Eusener Castilho", email = "eusener@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "sqlalchemy>=2.0.30,<3",
    "psycopg2-binary>=2.9.9,<3",
]

[dependency-groups]
dev = ["pytest>=8.2.2,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
