[project]
name = "fastapi-project"
version = "0.0.1"
description = ""
authors = [{ name = "Eusener Castilho", email = "eusener@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.6",
    "sqlalchemy>=2.0.30,<3",
    "psycopg2-binary>=2.9.9,<3",
    "h11>=0.16.0",
]

[dependency-groups]
dev = ["pytest>=8.2.2,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
